fix: Critical CI/CD pipeline improvements (Phase 8)
## Summary

Phase 8 Day 1 - Fixed all critical CI/CD issues identified in audit

### Critical Issues Fixed

**1. Added Tests Before Release** ✅
- File: .github/workflows/release.yml
- Added test job as dependency before build
- Ensures all tests pass before creating release
- Release flow: Tag → Test → Build → Release

**2. Fixed macOS App Bundle Creation** ✅
- File: .github/workflows/reusable_build.yml
- Created proper .app bundle structure
- Added complete Info.plist with metadata
- Fixed executable permissions
- Added Resources directory for icon
- Bundle now includes:
  - Contents/MacOS/Modan2 (executable)
  - Contents/Resources/Modan2.png (icon)
  - Contents/Info.plist (metadata)

**3. Fixed macOS Artifact Path Pattern** ✅
- File: .github/workflows/release.yml
- Changed from specific pattern to wildcard: *.dmg
- Also added wildcard patterns for all platforms
- Now catches all build artifacts reliably

### Important Improvements

**4. Added SHA256 Checksums** ✅
- File: .github/workflows/release.yml
- Generates SHA256SUMS.txt for all artifacts
- Included in GitHub release assets
- Users can verify download integrity

**5. Added RELEASE_NOTES.md to Release** ✅
- File: .github/workflows/release.yml
- Includes RELEASE_NOTES.md content in GitHub release body
- Falls back to default message if not found
- Appends checksums to release body

**6. Made Test Workflow Reusable** ✅
- File: .github/workflows/test.yml
- Added workflow_call trigger
- Can now be called from release workflow
- Enables test-before-release pattern

### Changes Made

#### .github/workflows/release.yml
```yaml
jobs:
  test:
    uses: ./.github/workflows/test.yml  # NEW: Run tests first

  call-build-workflow:
    needs: test  # NEW: Depend on tests passing
    ...

  create-release:
    steps:
      - Checkout code  # NEW: Access RELEASE_NOTES.md
      - Download artifacts
      - Generate SHA256 checksums  # NEW
      - Prepare release body with R

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,7 +9,11 @@ on:
       - 'v*.*.*'
 
 jobs:
+  test:
+    uses: ./.github/workflows/test.yml
+
   call-build-workflow:
+    needs: test
     uses: ./.github/workflows/reusable_build.yml
     with:
       build_number: ${{ github.run_number }}
@@ -18,24 +22,71 @@ jobs:
     needs: call-build-workflow
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
       - name: Download all artifacts
         uses: actions/download-artifact@v4
         with:
           path: release-files/
+
+      - name: Generate SHA256 checksums
+        run: |
+          cd release-files
+          find . -type f \( -name "*.zip" -o -name "*.dmg" -o -name "*.AppImage" \) -exec sha256sum {} \; > ../SHA256SUMS.txt
+          cd ..
+          echo "=== Generated Checksums ==="
+          cat SHA256SUMS.txt
+
+      - name: Prepare release body
+        id: release_body
+        run: |
+          if [ -f RELEASE_NOTES.md ]; then
+            echo "Found RELEASE_NOTES.md"
+            {
+              echo 'RELEASE_BODY<<EOF'
+              cat RELEASE_NOTES.md
+              echo ""
+              echo "---"
+              echo ""
+              echo "## SHA256 Checksums"
+              echo ""
+              echo '```'
+              cat SHA256SUMS.txt
+              echo '```'
+              echo ""
+              echo "Built from commit: ${{ github.sha }}"
+              echo 'EOF'
+            } >> $GITHUB_OUTPUT
+          else
+            echo "RELEASE_NOTES.md not found, using default body"
+            {
+              echo 'RELEASE_BODY<<EOF'
+              echo "🚀 Modan2 ${{ github.ref_name }} Release"
+              echo ""
+              echo "## SHA256 Checksums"
+              echo ""
+              echo '```'
+              cat SHA256SUMS.txt
+              echo '```'
+              echo ""
+              echo "Built from commit: ${{ github.sha }}"
+              echo 'EOF'
+            } >> $GITHUB_OUTPUT
+          fi
 
       - name: Create Release
         uses: softprops/action-gh-release@v2
         with:
           tag_name: ${{ github.ref_name }}
           name: Modan2 ${{ github.ref_name }}
-          body: |
-            🚀 Modan2 ${{ github.ref_name }} Release
-
-            Built from commit: ${{ github.sha }}
+          body: ${{ steps.release_body.outputs.RELEASE_BODY }}
           prerelease: ${{ contains(github.ref_name, '-alpha') || contains(github.ref_name, '-beta') || contains(github.ref_name, '-rc') }}
           files: |
-            release-files/modan2-windows/Modan2-Windows-*.zip
-            release-files/modan2-macos/Modan2-macOS-*.dmg
-            release-files/modan2-linux/Modan2-Linux-*.AppImage
+            release-files/modan2-windows/*.zip
+            release-files/modan2-windows/*.exe
+            release-files/modan2-macos/*.dmg
+            release-files/modan2-linux/*.AppImage
+            SHA256SUMS.txt
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
