fix: Update .gitattributes to properly handle line endings for data files
- Changed *.nts, *.tps, *.txt from binary to text=auto
- Keep *.obj, *.ply, *.stl as binary (can be binary or text format)
- This prevents false modified status due to line ending changes

--- a/.gitattributes
+++ b/.gitattributes
@@ -23,10 +23,12 @@
 *.bat text eol=crlf
 *.cmd text eol=crlf
 
-# Data files - treat as binary to preserve original line endings
-*.nts binary
-*.tps binary
+# Data files - use auto detection for line endings
+*.nts text=auto
+*.tps text=auto
+*.txt text=auto
+
+# 3D model files - can be binary or text, treat as binary to be safe
 *.obj binary
 *.ply binary
 *.stl binary
-*.txt binary
