--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,12 @@ translations/desktop.ini
 *.spec
 logs/
 .claude/settings.local.json
+
+# Test coverage files
+.coverage
+.coverage.*
+htmlcov/
+coverage.xml
+coverage.json
+*.cover
+.pytest_cache/
